fix(player-detail): fix avatar size in sport context to match tournament context

--- a/src/app/features/players/components/detail/player-detail.component.less
+++ b/src/app/features/players/components/detail/player-detail.component.less
@@ -49,7 +49,14 @@
 
 .player-detail__player-photo {
   background: var(--tui-background-accent-1);
-  font-size: 3rem;
+  font-size: 3.5rem;
+  width: 150px;
+  height: 150px;
+
+  ::ng-deep tui-avatar {
+    width: 150px;
+    height: 150px;
+  }
 }
 
 .player-detail__player-photo-large {
