--- a/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.less
+++ b/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.less
@@ -50,6 +50,13 @@
   background: var(--tui-background-accent-1);
 }
 
+.sport-tournaments-tab__tournament-logo {
+  width: 3.5rem;
+  height: 3.5rem;
+  object-fit: contain;
+  border-radius: 50%;
+}
+
 .sport-tournaments-tab__tournament-content {
   display: flex;
   flex-direction: column;
