bugfix(sport-tournaments-tab): fix tournament logo loading with correct backend URL
- Fixed sportLogoUrl method to use tournament_logo_icon_url instead of title
- Updated template to use buildStaticUrl() for proper backend URL (port 9000)
- Images now load from backend instead of Angular dev server

--- a/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.html
+++ b/src/app/features/sports/components/detail/tabs/sport-tournaments-tab.component.html
@@ -44,8 +44,8 @@
             tuiCell="l"
             (click)="navigateToTournamentDetail(tournament.id)">
             <div class="sport-tournaments-tab__tournament-icon">
-              @if (tournament.tournament_logo_icon_url) {
-                <img [src]="tournament.tournament_logo_icon_url" [alt]="tournament.title" class="sport-tournaments-tab__tournament-logo" />
+              @if (tournamentLogoUrl(tournament); as logoUrl) {
+                <img [src]="logoUrl" [alt]="tournament.title" class="sport-tournaments-tab__tournament-logo" />
               } @else {
                 <tui-avatar size="l" class="sport-tournaments-tab__tournament-avatar">
                   <tui-icon icon="@tui.trophy" />
