--- a/src/app/shared/components/entity-header/entity-header.component.less
+++ b/src/app/shared/components/entity-header/entity-header.component.less
@@ -9,6 +9,13 @@
     min-width: 0;
   }
 
+  &__logo {
+    width: 4rem;
+    height: 4rem;
+    object-fit: contain;
+    flex-shrink: 0;
+  }
+
   &__title {
     flex: 0 1 auto;
     min-width: 0;
@@ -82,6 +89,11 @@
 
     &__title {
       font-size: 1.25rem;
+    }
+
+    &__logo {
+      width: 2.5rem;
+      height: 2.5rem;
     }
   }
 }
