fix(images): save all three resized image URLs from backend upload
Previously, person and tournament components only saved the webview URL
when uploading images, missing the original and icon URLs. Backend
provides three resized versions (original, icon, webview) for each
uploaded image, but only one was being saved.

Changes:
- PersonCreateComponent: Save all three photo URLs (original, icon, webview)
- PersonEditComponent: Save all three photo URLs (original, icon, webview)
- TournamentCreateComponent: Save all three logo URLs (original, icon, webview)
- TournamentEditComponent: Save all three logo URLs (original, icon, webview)
- Update schemas to document three-image upload pattern

Team components already implemented this correctly.

Fixes issue where resized images from backend were not being utilized.

--- a/src/app/features/persons/components/create/person-create.component.html
+++ b/src/app/features/persons/components/create/person-create.component.html
@@ -63,9 +63,9 @@
       />
       @if (photoUploadLoading()) {
         <div class="person-create__loading">Uploading photo...</div>
-      } @else if (photoPreviewUrl()) {
+      } @else if (photoPreviewUrls()?.webview) {
         <div class="person-create__preview">
-          <img [src]="photoPreviewUrl()!" alt="Photo preview" class="person-create__preview-image" />
+          <img [src]="photoPreviewUrls()!.webview" alt="Photo preview" class="person-create__preview-image" />
         </div>
       }
     </div>
