--- a/src/app/features/persons/components/list/person-list.component.html
+++ b/src/app/features/persons/components/list/person-list.component.html
@@ -76,7 +76,7 @@
       @for (person of persons(); track person.id) {
         <div class="person-card" tuiAppearance="neutral" tuiCardLarge tuiCell="l" (click)="navigateToPersonDetail(person.id)">
           <tui-avatar size="l" [src]="photoUrl(person)" [round]="true">
-            @if (!person.person_photo_url) {
+            @if (!person.person_photo_icon_url) {
               {{ person.first_name?.[0]?.toUpperCase() }}{{ person.second_name?.[0]?.toUpperCase() }}
             }
           </tui-avatar>
