--- a/src/app/features/sports/components/parse-eesl/sport-parse-eesl.component.less
+++ b/src/app/features/sports/components/parse-eesl/sport-parse-eesl.component.less
@@ -232,6 +232,12 @@
   margin-top: 4px;
 }
 
+.sport-parse-eesl__tournament-description {
+  font-size: 13px;
+  color: var(--tui-text-secondary);
+  margin-top: 4px;
+}
+
 .sport-parse-eesl__remove-btn {
   width: 32px;
   height: 32px;
