--- a/src/app/features/sports/components/parse-eesl/sport-parse-eesl.component.html
+++ b/src/app/features/sports/components/parse-eesl/sport-parse-eesl.component.html
@@ -20,7 +20,8 @@
         <select
           id="eesl-season-year"
           class="sport-parse-eesl__select"
-          [(ngModel)]="eeslSeasonYear"
+          [ngModel]="eeslSeasonYear()"
+          (ngModelChange)="onSeasonChange($event)"
         >
           <option value="">Select a season...</option>
           @for (year of availableYears(); track year) {
