refactor(sport-detail): move Parse EESL button to gear menu
- Moved Parse EESL button from header into EntityHeader gear menu as custom item
- Added customMenuItems computed property with conditional Parse EESL item
- Implemented onCustomItemClick handler to navigate to parse page
- Removed standalone button HTML and CSS styles
- Updated documentation to reflect menu item location

--- a/src/app/features/sports/components/detail/sport-detail.component.html
+++ b/src/app/features/sports/components/detail/sport-detail.component.html
@@ -6,12 +6,9 @@
         (navigateBack)="navigateBack()"
         (edit)="navigateToEdit()"
         (delete)="deleteSport()"
+        [customMenuItems]="customMenuItems()"
+        (customItemClick)="onCustomItemClick($event)"
       />
-      @if (showParseButton()) {
-        <button class="sport-detail__parse-btn" (click)="navigateToParseEesl()">
-          📥 Parse EESL
-        </button>
-      }
     </div>
 
     <div class="sport-detail__subnav">
