refactor(entity-header): add showGear input to control gear menu visibility

--- a/src/app/features/sports/components/parse-eesl/sport-parse-eesl.component.html
+++ b/src/app/features/sports/components/parse-eesl/sport-parse-eesl.component.html
@@ -3,6 +3,7 @@
     [title]="sport()?.title || 'Parse EESL Season'"
     [showEdit]="false"
     [showDelete]="false"
+    [showGear]="false"
     (navigateBack)="navigateBack()"
   />
 
